Nested blocks bug fix: Headings now behave more like Notion h blocks
Without these changes, h1's were getting centered, which broke the visual flow of nesting, and the h's all were using browser-defined margins, which causes too much vertical spacing

--- a/demo-app/src/app.css
+++ b/demo-app/src/app.css
@@ -59,12 +59,13 @@ div {
 	color: var(--heading-color);
 }
 
+h1,
+h2,
+h3,
 p,
 div {
 	line-height: 1.5;
-	margin: 0.25rem;
-	margin-top: 1px;
-	margin-bottom: 1px;
+	margin: 1px 0.25rem 1px 0;
 	min-height: 1rem;
 }
 
@@ -79,7 +80,6 @@ a:hover {
 
 h1 {
 	font-size: 3.5rem;
-	text-align: center;
 }
 
 h2 {
